k8s-manifests/books/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-app
  namespace: books
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
      - name: books
        image: 426192960096.dkr.ecr.us-east-1.amazonaws.com/books:v1
        ports:
        - containerPort: 5000
