k8s-manifests/books/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
  namespace: books
spec:
  selector:
    app: books
  ports:
    - port: 80
      targetPort: 5000
  type: NodePort
